--- a/css/style.css
+++ b/css/style.css
@@ -598,7 +598,7 @@ button:focus {
 }
 
 .causes_slider .owl-dots .owl-dot.active {
-  background: #a7cb00;
+  background: #8B0000;
 }
 
 .causes_item {
