--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,5 @@
-/*----------------------------------------------------
-@File: Default Styles
-@Author: Rocky Ahmed
-@URL: http://wethemez.com
-Author E-mail: rockybd1995@gmail.com
 
-This file contains the styling for the actual theme, this
-is the file you need to edit to change the look of the
-theme.
----------------------------------------------------- */
-/*=====================================================================
-@Template Name: HostHub Construction 
-@Author: Rocky Ahmed
-@Developed By: Rocky Ahmed
-@Developer URL: http://rocky.wethemez.com
-Author E-mail: rockybd1995@gmail.com
-
-@Default Styles
-
-Table of Content:
-01/ Variables
-02/ predefin
-03/ header
-04/ button
-05/ banner
-06/ breadcrumb
-07/ about
-08/ team
-09/ project 
-10/ price 
-11/ team 
-12/ blog 
-13/ video  
-14/ features  
-15/ career  
-16/ contact 
-17/ footer
-
-=====================================================================*/
-/*----------------------------------------------------*/
-/*font Variables*/
-/*Color Variables*/
-/*=================== fonts ====================*/
 @import url("https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700|Raleway:300,400,500,600,700");
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
 .list {
   list-style: none;
   margin: 0px;
@@ -3442,7 +3398,7 @@ h6 {
 }
 
 .white_bg_btn:hover {
-  background: #a7cb00;
+  background: #8B0000;
   color: #fff;
 }
 
@@ -3504,7 +3460,7 @@ h6 {
 }
 
 .slider_text_inner .slider_text {
-  background: #fff;
+  background: #000;
   border-radius: 5px;
   padding: 65px;
   position: relative;
@@ -3514,7 +3470,7 @@ h6 {
   content: "";
   width: 360px;
   height: 530px;
-  background: rgba(167, 203, 0, 0.8);
+  background: #8B0000;
   position: absolute;
   left: -95px;
   top: -70px;
@@ -3523,7 +3479,7 @@ h6 {
 
 .slider_text_inner .slider_text h2 {
   font-size: 48px;
-  color: #000000;
+  color: #fff;
   text-transform: uppercase;
   margin-bottom: 12px;
 }
@@ -3538,402 +3494,6 @@ h6 {
 
 /* End Home Slider Area css
 ============================================================================================ */
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
-/* Main Button Area css
-============================================================================================ */
-.mission_area {
-  overflow: hidden;
-}
-
-.mission_area .left_img {
-  overflow: hidden;
-}
-
-.mission_area .col-lg-6 {
-  vertical-align: middle;
-  -ms-flex-item-align: center;
-  align-self: center;
-}
-
-.mission_slider {
-  max-width: 400px;
-  margin-left: 130px;
-}
-
-.mission_slider .owl-prev {
-  margin-top: -20px;
-}
-
-.mission_slider .owl-next {
-  margin-top: 20px;
-}
-
-.mission_slider .owl-prev, .mission_slider .owl-next {
-  position: absolute;
-  right: -200px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  font-size: 40px;
-  color: #e6e6e6;
-  -webkit-transition: all 300ms linear 0s;
-  -o-transition: all 300ms linear 0s;
-  transition: all 300ms linear 0s;
-  cursor: pointer;
-}
-
-.mission_slider .owl-prev:hover, .mission_slider .owl-next:hover {
-  color: #000000;
-}
-
-.mission_text {
-  text-align: center;
-  margin-bottom: 70px;
-  max-width: 400px;
-}
-
-.mission_text h4 {
-  color: #000000;
-  text-transform: uppercase;
-  margin-bottom: 20px;
-  font-size: 24px;
-}
-
-.mission_text p {
-  margin-bottom: 0px;
-}
-
-.mission_text:last-child {
-  margin-bottom: 0px;
-}
-
-.success_area {
-  overflow: hidden;
-}
-
-.success_area .success_img {
-  overflow: hidden;
-}
-
-.success_area .col-lg-6 {
-  vertical-align: middle;
-  -ms-flex-item-align: center;
-  align-self: center;
-}
-
-.success_area .mission_text {
-  float: right;
-  margin-right: 130px;
-}
-
-.success_area .right_dir .mission_text {
-  float: none;
-  margin-left: 130px;
-}
-
-/* End Main Button Area css
-============================================================================================ */
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
-/* Project Area css
-============================================================================================ */
-.project_area {
-  overflow: hidden;
-}
-
-.project_item {
-  position: relative;
-}
-
-.project_item:before {
-  content: "";
-  background: rgba(255, 255, 255, 0.8);
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  -webkit-transition: all 300ms linear 0s;
-  -o-transition: all 300ms linear 0s;
-  transition: all 300ms linear 0s;
-}
-
-.project_item img {
-  width: 100%;
-}
-
-.project_item .hover_text {
-  position: absolute;
-  left: 0px;
-  width: 100%;
-  text-align: center;
-  bottom: 15px;
-  -webkit-transition: all 300ms linear 0s;
-  -o-transition: all 300ms linear 0s;
-  transition: all 300ms linear 0s;
-}
-
-.project_item .hover_text h4 {
-  color: #000000;
-  font-size: 24px;
-  line-height: 30px;
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
-
-.project_item .hover_text .cat a {
-  color: #000000;
-  margin-right: 8px;
-  font-size: 14px;
-  font-family: "Raleway", sans-serif;
-  position: relative;
-}
-
-.project_item .hover_text .cat a:before {
-  content: "/";
-  position: absolute;
-  right: -10px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
-.project_item .hover_text .cat a:last-child {
-  margin-right: 0px;
-}
-
-.project_item .hover_text .cat a:last-child:before {
-  display: none;
-}
-
-.project_item .hover_text .main_btn {
-  line-height: 0px;
-  height: 0px;
-  opacity: 0;
-}
-
-.project_item:hover:before {
-  opacity: 1;
-}
-
-.project_item:hover .hover_text {
-  bottom: 35px;
-}
-
-.project_item:hover .hover_text .main_btn {
-  height: 100%;
-  line-height: 48px;
-  opacity: 1;
-  margin-top: 22px;
-}
-
-/* End Project Area css
-============================================================================================ */
-/* Estimate Area css
-============================================================================================ */
-.project_know_area {
-  background: #a7cb00;
-}
-
-.project_know_area h3 {
-  font-size: 36px;
-  text-transform: uppercase;
-  color: #fff;
-  margin-bottom: 12px;
-}
-
-.project_know_area p {
-  color: #fff;
-  max-width: 770px;
-  margin: auto;
-}
-
-.project_know_area .white_btn {
-  margin-top: 30px;
-}
-
-/* End Estimate Area css
-============================================================================================ */
-/* Portfolio Details Area css
-============================================================================================ */
-.portfolio_details_inner .row {
-  margin-bottom: 65px;
-}
-
-.portfolio_details_inner p {
-  margin-bottom: 30px;
-  font-size: 14px;
-}
-
-.portfolio_details_inner p:last-child {
-  margin-bottom: 0px;
-}
-
-.portfolio_details_inner .portfolio_right_text {
-  padding-left: 98px;
-}
-
-.portfolio_details_inner .portfolio_right_text h4 {
-  color: #000000;
-  font-size: 21px;
-  text-transform: uppercase;
-  margin-bottom: 18px;
-}
-
-.portfolio_details_inner .portfolio_right_text p {
-  margin-bottom: 25px;
-  font-size: 14px;
-}
-
-.portfolio_details_inner .portfolio_right_text .list li {
-  margin-bottom: 7px;
-  color: #666666;
-  font-weight: normal;
-  font-size: 14px;
-}
-
-.portfolio_details_inner .portfolio_right_text .list li span {
-  font-size: 14px;
-  color: #000000;
-  font-weight: bold;
-  width: 97px;
-  display: inline-block;
-}
-
-.portfolio_details_inner .portfolio_right_text .list li:last-child {
-  margin-bottom: 0px;
-}
-
-.portfolio_details_inner .portfolio_right_text .list li i {
-  color: #f1cd09;
-}
-
-.social_details {
-  margin-top: 50px;
-}
-
-.social_details li {
-  display: inline-block;
-  margin-right: 14px;
-}
-
-.social_details li a {
-  font-size: 14px;
-}
-
-.social_details li a i {
-  color: #000000 !important;
-}
-
-.social_details li a i:hover {
-  color: #a7cb00 !important;
-}
-
-.social_details li:last-child {
-  margin-right: 0px;
-}
-
-/* End Portfolio Details Area css
-============================================================================================ */
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
-/* Team Area css
-============================================================================================ */
-.team_item {
-  position: relative;
-}
-
-.team_item:before {
-  content: "";
-  background: url(../img/team/team-overlay.png) no-repeat;
-  background-size: cover;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-}
-
-.team_item .hover_text {
-  position: absolute;
-  left: 0px;
-  bottom: 50px;
-  width: 100%;
-  text-align: center;
-  -webkit-transition: all 300ms linear 0s;
-  -o-transition: all 300ms linear 0s;
-  transition: all 300ms linear 0s;
-}
-
-.team_item .hover_text h4 {
-  font-size: 24px;
-  color: #000000;
-  text-transform: uppercase;
-  -webkit-transition: all 300ms linear 0s;
-  -o-transition: all 300ms linear 0s;
-  transition: all 300ms linear 0s;
-}
-
-.team_item .hover_text p {
-  color: #000000;
-  margin-bottom: 0px;
-  -webkit-transition: all 300ms linear 0s;
-  -o-transition: all 300ms linear 0s;
-  transition: all 300ms linear 0s;
-}
-
-.team_item .hover_text .list {
-  margin-top: 0px;
-  height: 0px;
-  overflow: hidden;
-  -webkit-transition: all 300ms linear 0s;
-  -o-transition: all 300ms linear 0s;
-  transition: all 300ms linear 0s;
-  opacity: 0;
-}
-
-.team_item .hover_text .list li {
-  display: inline-block;
-  margin-right: 4px;
-}
-
-.team_item .hover_text .list li a {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  background: #e9ebee;
-  text-align: center;
-  color: #000000;
-  line-height: 30px;
-}
-
-.team_item .hover_text .list li:last-child {
-  margin-right: 0px;
-}
-
-.team_item .hover_text .list li:hover a {
-  background: #a7cb00;
-  color: #fff;
-}
-
-.team_item:hover .list {
-  height: 30px;
-  overflow: visible;
-  opacity: 1;
-  margin-top: 25px;
-  -webkit-transition: all 300ms linear 0s;
-  -o-transition: all 300ms linear 0s;
-  transition: all 300ms linear 0s;
-}
-
-/* End Team Area css
-============================================================================================ */
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
 /*============== footer-area css ===============*/
 .footer-area {
   background: #f9f9ff;
@@ -4064,7 +3624,3 @@ h6 {
 .footer-bottom .footer-social a:hover {
   color: #a7cb00;
 }
-
-/*---------------------------------------------------- */
-
-/*# sourceMappingURL=style.css.map */
