--- a/css/style.css
+++ b/css/style.css
@@ -1,502 +1,27 @@
+/*----------------------------------------------------
 
+Table of Content:
+01/ Variables
+02/ predefin
+03/ header
+04/ button
+05/ banner
+06/ breadcrumb
+07/ about
+08/ team
+09/ project 
+10/ price 
+11/ team 
+12/ blog 
+13/ video  
+14/ features  
+15/ career  
+16/ contact 
+17/ footer
+*/
 @import url("https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700|Raleway:300,400,500,600,700");
-.list {
-  list-style: none;
-  margin: 0px;
-  padding: 0px;
-}
 
-a {
-  text-decoration: none;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
 
-a:hover, a:focus {
-  text-decoration: none;
-  outline: none;
-}
-
-.row.m0 {
-  
-  margin: 0px;
-}
-
-body {
-  line-height: 26px;
-  font-size: 15px;
-  font-family: "Raleway", sans-serif;
-  font-weight: normal;
-  color: #666666;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Oswald", sans-serif;
-  font-weight: bold;
-}
-
-button:focus {
-  outline: none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
-
-.p_120 {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-
-.pad_top {
-  padding-top: 120px;
-}
-
-.mt-25 {
-  margin-top: 25px;
-}
-
-.p0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1170px;
-  }
-}
-
-@media (min-width: 1620px) {
-  .box_1620 {
-    max-width: 1650px;
-    margin: auto;
-  }
-}
-
-@media (min-width: 1200px) {
-  .header_area.home_menu {
-    display: none;
-  }
-  .header_area.home_menu + section, .header_area.home_menu + row, .header_area.home_menu + div {
-    margin-top: 0px;
-  }
-}
-
-/* Main Title Area css
-============================================================================================ */
-.main_title {
-  text-align: left;
-  margin-bottom: 75px;
-}
-
-.main_title h2 {
-  font-family: "Raleway", sans-serif;
-  font-size: 36px;
-  color: #000000;
-  font-weight: 700;
-  margin-bottom: 15px;
-}
-
-.main_title p {
-  font-size: 16px;
-  font-family: "Raleway", sans-serif;
-  line-height: 26px;
-  color: #666666;
-  margin-bottom: 0px;
-  max-width: 690px;
-  font-weight: normal;
-}
-
-.main_title.white h2 {
-  color: #fff;
-}
-
-.main_title.white p {
-  color: #fff;
-  opacity: .6;
-}
-
-/* End Main Title Area css
-============================================================================================ */
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
-.header_area {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 99;
-  -webkit-transition: background 0.4s, all 0.3s linear;
-  -o-transition: background 0.4s, all 0.3s linear;
-  transition: background 0.4s, all 0.3s linear;
-}
-
-.header_area .menu_nav {
-  width: 100%;
-}
-
-.header_area .navbar {
-  background: transparent;
-  padding: 0px;
-  border: 0px;
-  border-radius: 0px;
-}
-
-.header_area .navbar .nav .nav-item {
-  margin-right: 45px;
-}
-
-.header_area .navbar .nav .nav-item .nav-link {
-  font: normal 13px/118px "Oswald", sans-serif;
-  text-transform: uppercase;
-  color: #000000;
-  padding: 0px;
-  display: inline-block;
-}
-
-.header_area .navbar .nav .nav-item .nav-link:after {
-  display: none;
-}
-
-.header_area .navbar .nav .nav-item:hover .nav-link, .header_area .navbar .nav .nav-item.active .nav-link {
-  color: #a7cb00;
-}
-
-.header_area .navbar .nav .nav-item.submenu {
-  position: relative;
-}
-
-.header_area .navbar .nav .nav-item.submenu ul {
-  border: none;
-  padding: 0px;
-  border-radius: 0px;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  margin: 0px;
-  background: #fff;
-  -webkit-box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
-}
-
-@media (min-width: 992px) {
-  .header_area .navbar .nav .nav-item.submenu ul {
-    position: absolute;
-    top: 120%;
-    left: 0px;
-    min-width: 200px;
-    text-align: left;
-    opacity: 0;
-    -webkit-transition: all 300ms ease-in;
-    -o-transition: all 300ms ease-in;
-    transition: all 300ms ease-in;
-    visibility: hidden;
-    display: block;
-    border: none;
-    padding: 0px;
-    border-radius: 0px;
-  }
-}
-
-.header_area .navbar .nav .nav-item.submenu ul:before {
-  content: "";
-  width: 0;
-  height: 0;
-  border-style: solid;
-  border-width: 10px 10px 0 10px;
-  border-color: #eeeeee transparent transparent transparent;
-  position: absolute;
-  right: 24px;
-  top: 45px;
-  z-index: 3;
-  opacity: 0;
-  -webkit-transition: all 400ms linear;
-  -o-transition: all 400ms linear;
-  transition: all 400ms linear;
-}
-
-.header_area .navbar .nav .nav-item.submenu ul .nav-item {
-  display: block;
-  float: none;
-  margin-right: 0px;
-  border-bottom: 1px solid #ededed;
-  margin-left: 0px;
-  -webkit-transition: all 0.4s linear;
-  -o-transition: all 0.4s linear;
-  transition: all 0.4s linear;
-}
-
-.header_area .navbar .nav .nav-item.submenu ul .nav-item .nav-link {
-  line-height: 45px;
-  color: #000000;
-  padding: 0px 30px;
-  -webkit-transition: all 150ms linear;
-  -o-transition: all 150ms linear;
-  transition: all 150ms linear;
-  display: block;
-  margin-right: 0px;
-}
-
-.header_area .navbar .nav .nav-item.submenu ul .nav-item:last-child {
-  border-bottom: none;
-}
-
-.header_area .navbar .nav .nav-item.submenu ul .nav-item:hover .nav-link {
-  background: #a7cb00;
-  color: #fff;
-}
-
-@media (min-width: 992px) {
-  .header_area .navbar .nav .nav-item.submenu:hover ul {
-    visibility: visible;
-    opacity: 1;
-    top: 100%;
-  }
-}
-
-.header_area .navbar .nav .nav-item.submenu:hover ul .nav-item {
-  margin-top: 0px;
-}
-
-.header_area .navbar .nav .nav-item:last-child {
-  margin-right: 0px;
-}
-
-.header_area .navbar .nav.navbar-nav.navbar-right {
-  max-width: 214px;
-  width: 100%;
-}
-
-.header_area .navbar .nav.navbar-nav.navbar-right li {
-  margin-right: 25px;
-}
-
-.header_area .navbar .nav.navbar-nav.navbar-right li a {
-  color: #dddddd;
-  font-size: 16px;
-}
-
-.header_area .navbar .nav.navbar-nav.navbar-right li a:hover {
-  color: #a7cb00;
-}
-
-.header_area .navbar .nav.navbar-nav.navbar-right li:last-child {
-  margin-right: 0px;
-  margin-left: 45px;
-}
-
-.header_area .navbar .nav.navbar-nav.navbar-right li:last-child a {
-  color: #000000;
-  font-size: 12px;
-}
-
-.header_area + section, .header_area + row, .header_area + div {
-  margin-top: 118px;
-}
-
-.header_area.navbar_fixed .main_menu {
-  position: fixed;
-  width: 100%;
-  top: -70px;
-  left: 0;
-  right: 0;
-  background: #fff;
-  -webkit-transform: translateY(70px);
-  -ms-transform: translateY(70px);
-  transform: translateY(70px);
-  -webkit-transition: background 500ms ease, -webkit-transform 500ms ease;
-  transition: background 500ms ease, -webkit-transform 500ms ease;
-  -o-transition: transform 500ms ease, background 500ms ease;
-  transition: transform 500ms ease, background 500ms ease;
-  transition: transform 500ms ease, background 500ms ease, -webkit-transform 500ms ease;
-  -webkit-transition: transform 500ms ease, background 500ms ease;
-  -webkit-box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
-}
-
-.header_area.navbar_fixed .main_menu .navbar .nav .nav-item .nav-link {
-  line-height: 70px;
-}
-
-.top_menu {
-  background: #ec9d5f;
-}
-
-.top_menu .float-left a {
-  line-height: 40px;
-  display: inline-block;
-  color: #fff;
-  font-family: "Raleway", sans-serif;
-  text-transform: uppercase;
-  font-size: 12px;
-  margin-right: 50px;
-  -webkit-transition: all 300ms linear 0s;
-  -o-transition: all 300ms linear 0s;
-  transition: all 300ms linear 0s;
-}
-
-.top_menu .float-left a:last-child {
-  margin-right: 0px;
-}
-
-.top_menu .float-left a:hover {
-  color: #a7cb00;
-}
-
-.top_menu .float-right .pur_btn {
-  background: #a7cb00;
-  color: #fff;
-  font-family: "Raleway", sans-serif;
-  line-height: 40px;
-  display: block;
-  padding: 0px 40px;
-  font-weight: 500;
-  font-size: 12px;
-}
-
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
-/* Home Banner Area css
-============================================================================================ */
-.blog_banner {
-  min-height: 780px;
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-  margin-bottom: 0px;
-}
-
-.blog_banner .banner_inner {
-  background: #04091e;
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  min-height: 780px;
-  z-index: 1;
-}
-
-.blog_banner .banner_inner .overlay {
-  background: url(../img/banner/banner-2.jpg) no-repeat scroll center center;
-  opacity: .5;
-  height: 125%;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  z-index: -1;
-}
-
-.blog_banner .banner_inner .blog_b_text {
-  max-width: 700px;
-  margin: auto;
-  color: #fff;
-  margin-top: 40px;
-}
-
-.blog_banner .banner_inner .blog_b_text h2 {
-  font-size: 60px;
-  font-weight: 500;
-  font-family: "Raleway", sans-serif;
-  line-height: 66px;
-  margin-bottom: 15px;
-}
-
-.blog_banner .banner_inner .blog_b_text p {
-  font-size: 16px;
-  margin-bottom: 35px;
-}
-
-.blog_banner .banner_inner .blog_b_text .white_bg_btn {
-  line-height: 42px;
-  padding: 0px 45px;
-}
-
-.banner_box {
-  max-width: 1620px;
-  margin: auto;
-}
-
-.banner_area {
-  position: relative;
-  z-index: 1;
-  background: url(../img/banner/banner.jpg) no-repeat scroll center center;
-  background-size: cover;
-}
-
-.banner_area .banner_inner {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  z-index: 1;
-  padding-top: 80px;
-  padding-bottom: 80px;
-}
-
-.banner_area .banner_inner .banner_content {
-  max-width: 655px;
-  background: #fff;
-  padding: 50px 65px;
-  position: relative;
-  border-radius: 5px;
-}
-
-.banner_area .banner_inner .banner_content:before {
-  content: "";
-  width: 313px;
-  height: 216px;
-  background: rgba(167, 203, 0, 0.8);
-  position: absolute;
-  left: -50px;
-  top: -30px;
-  z-index: -1;
-}
-
-.banner_area .banner_inner .banner_content h2 {
-  color: #000000;
-  font-size: 36px;
-  margin-bottom: 0px;
-  display: inline-block;
-  text-transform: uppercase;
-}
-
-.banner_area .banner_inner .banner_content .page_link {
-  display: inline-block;
-  float: right;
-  padding-top: 10px;
-}
-
-.banner_area .banner_inner .banner_content .page_link a {
-  font-size: 14px;
-  color: #666666;
-  font-family: "Raleway", sans-serif;
-  margin-right: 32px;
-  font-weight: 300;
-  position: relative;
-  text-transform: uppercase;
-}
-
-.banner_area .banner_inner .banner_content .page_link a:before {
-  content: "\f0da";
-  font: normal normal normal 14px/1 FontAwesome;
-  position: absolute;
-  right: -25px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-
-.banner_area .banner_inner .banner_content .page_link a:last-child {
-  margin-right: 0px;
-}
-
-.banner_area .banner_inner .banner_content .page_link a:last-child:before {
-  display: none;
-}
-
-/* End Home Banner Area css
-============================================================================================ */
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
 /* Home Blog Area css
 ============================================================================================ */
 .home_blog_area .col-lg-3 {
@@ -555,7 +80,7 @@ button:focus {
 }
 
 .causes_slider .owl-dots .owl-dot.active {
-  background: #8B0000;
+  background: #a7cb00;
 }
 
 .causes_item {
@@ -572,7 +97,7 @@ button:focus {
   width: 100%;
   left: 0px;
   height: 3px;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(182, 0, 0, 0.5);
 }
 
 .causes_item .causes_img .c_parcent span {
@@ -1841,7 +1366,7 @@ button:focus {
 }
 
 .primary {
-  background: #52c5fd;
+  background: #B60000  ;
 }
 
 .primary:before {
@@ -3379,55 +2904,6 @@ h6 {
   background: #a7cb00;
   border-color: #a7cb00;
 }
-
-/* Main Blog Banner Button Area css
-============================================================================================ */
-.white_bg_btn {
-  background: #fff;
-  display: inline-block;
-  color: #000000;
-  line-height: 40px;
-  padding: 0px 28px;
-  font-size: 14px;
-  font-family: "Raleway", sans-serif;
-  font-weight: 600;
-  text-transform: uppercase;
-  -webkit-transition: all 300ms linear 0s;
-  -o-transition: all 300ms linear 0s;
-  transition: all 300ms linear 0s;
-  border: none;
-}
-
-.white_bg_btn:hover {
-  background: #8B0000;
-  color: #fff;
-}
-
-/* End Main Blog Banner Button Area css
-============================================================================================ */
-.blog_btn {
-  border: 1px solid #eeeeee;
-  background: #f9f9ff;
-  padding: 0px 32px;
-  font-size: 13px;
-  font-weight: 500;
-  font-family: "Raleway", sans-serif;
-  border-radius: 5px;
-  color: #000000;
-  line-height: 34px;
-  display: inline-block;
-}
-
-.blog_btn:hover {
-  background: #a7cb00;
-  border-color: #a7cb00;
-  color: #fff;
-}
-
-/* End Main Button Area css
-============================================================================================ */
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
 /* Home Slider Area css
 ============================================================================================ */
 .home_banner_area {
@@ -3461,7 +2937,7 @@ h6 {
 }
 
 .slider_text_inner .slider_text {
-  background: #000;
+  background: #fff;
   border-radius: 5px;
   padding: 65px;
   position: relative;
@@ -3471,7 +2947,7 @@ h6 {
   content: "";
   width: 360px;
   height: 530px;
-  background: #8B0000;
+  background: rgba(167, 203, 0, 0.8);
   position: absolute;
   left: -95px;
   top: -70px;
@@ -3480,7 +2956,7 @@ h6 {
 
 .slider_text_inner .slider_text h2 {
   font-size: 48px;
-  color: #fff;
+  color: #000000;
   text-transform: uppercase;
   margin-bottom: 12px;
 }
@@ -3495,133 +2971,3 @@ h6 {
 
 /* End Home Slider Area css
 ============================================================================================ */
-/*============== footer-area css ===============*/
-.footer-area {
-  background: #f9f9ff;
-  padding-top: 120px;
-}
-
-.single-footer-widget p {
-  margin-bottom: 0px;
-  font-size: 14px;
-}
-
-.single-footer-widget ul li a {
-  line-height: 25px;
-  display: inline-block;
-  color: #777;
-  -webkit-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  transition: all 0.3s linear;
-  margin-bottom: 13px;
-  font-size: 14px;
-}
-
-.single-footer-widget ul li a:hover {
-  color: #a7cb00;
-}
-
-.single-footer-widget .instafeed {
-  margin-left: -5px;
-  margin-right: -5px;
-}
-
-.single-footer-widget .instafeed li {
-  margin: 5px;
-}
-
-.single-footer-widget .subscribe_form {
-  padding-top: 25px;
-}
-
-.single-footer-widget .input-group {
-  display: block !important;
-}
-
-.single-footer-widget input {
-  width: 100%;
-  border: 1px solid #eeeeee;
-  font-size: 13px;
-  line-height: 30px;
-  padding-right: 40px;
-  height: 40px;
-  color: #999999;
-  background: #fff;
-  padding-left: 20px;
-}
-
-.single-footer-widget input.placeholder {
-  color: #999999;
-}
-
-.single-footer-widget input:-moz-placeholder {
-  color: #999999;
-}
-
-.single-footer-widget input::-moz-placeholder {
-  color: #999999;
-}
-
-.single-footer-widget input::-webkit-input-placeholder {
-  color: #999999;
-}
-
-.single-footer-widget input:focus {
-  outline: none;
-}
-
-.single-footer-widget .sub-btn {
-  background: #a7cb00;
-  color: #fff;
-  font-weight: 300;
-  border-radius: 0;
-  line-height: 34px;
-  padding: 4px 11px 0px;
-  cursor: pointer;
-  position: absolute;
-  right: 0px;
-  top: 0px;
-}
-
-.footer_title {
-  font-size: 20px;
-  line-height: 24px;
-  font-weight: 500;
-  color: #000000;
-  margin-bottom: 28px;
-  text-transform: uppercase;
-}
-
-.border_line {
-  width: 100%;
-  height: 1px;
-  background: #eeeeee;
-  margin-top: 100px;
-}
-
-.footer-bottom {
-  padding-top: 25px;
-  padding-bottom: 25px;
-}
-
-.footer-bottom .footer-text a {
-  color: #a7cb00;
-}
-
-.footer-bottom .footer-social {
-  text-align: right;
-}
-
-.footer-bottom .footer-social a {
-  font-size: 18px;
-  line-height: 30px;
-  color: #191919;
-  margin-left: 25px;
-  -webkit-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  transition: all 0.3s linear;
-}
-
-.footer-bottom .footer-social a:hover {
-  color: #a7cb00;
-}
