--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 
 @import url("https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700|Raleway:300,400,500,600,700");
-
+body {
+  background-image: url(../img/slider1.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
 .banner_btn {
   padding: 0px 38px;
   line-height: 48px;
@@ -33,7 +39,9 @@
 }
 img {
   width: 100%;
-  height: 800px;
+  height: 600px;
+  opacity:0.0;
+   filter:alpha(opacity=60);
 }
 .slider_text_inner {
   position: absolute;
